# glim_ext

./: .gitmodules  CMakeLists.txt  package.xml
config/: config_bbox_filter.json  config_ext.json  config_prior_map_localization.json
docs/superpowers/plans/: 2026-06-05-prior-map-localization.md
docs/superpowers/specs/: 2026-06-05-prior-map-localization-design.md
modules/example/glim_callback_demo/: CMakeLists.txt
modules/localization/prior_map_localization/: CMakeLists.txt
modules/localization/prior_map_localization/include/glim_ext/: initial_pose_source.hpp  inject_decision.hpp  localization_math.hpp  prior_map_localization.hpp  prior_map_manager.hpp
modules/localization/prior_map_localization/src/glim_ext/: initial_pose_source.cpp  prior_map_localization.cpp  prior_map_manager.cpp
modules/localization/prior_map_localization/test/: test_inject_decision.cpp  test_localization_math.cpp  test_prior_map_manager.cpp
modules/mapping/dbow_loop_detector/: CMakeLists.txt
modules/odometry/deskewing/: CMakeLists.txt
modules/odometry/deskewing/include/glim_ext/: deskewing_module.hpp
modules/odometry/deskewing/src/glim_ext/: deskewing_module.cpp
modules/odometry/imu_validator/: CMakeLists.txt
modules/odometry/orb_slam_frontend/: CMakeLists.txt
modules/odometry/velocity_suppressor/: CMakeLists.txt
modules/preprocess/bbox_filter/: CMakeLists.txt  package.xml
modules/preprocess/bbox_filter/include/glim_ext/: bbox_filter_module.hpp
modules/preprocess/bbox_filter/src/glim_ext/: bbox_filter_module.cpp  bbox_filter_module_create.cpp
