<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glim_ext</name>
  <version>0.0.0</version>
  <description>Extension modules for GLIM</description>
  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>glim</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <test_depend>ament_cmake_gtest</test_depend>

</package>
